--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.4",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.1",
