--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.3",
     "emoji-picker-react": "^4.4.7",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
